--- a/GlucoMan.Maui/MealsPage.xaml
+++ b/GlucoMan.Maui/MealsPage.xaml
@@ -4,7 +4,7 @@
              x:Class="GlucoMan.Maui.MealsPage"
              Title="Meals">
     <ContentPage.Content>
-        <Grid RowDefinitions="40,20,50,20,50,40,50,20,20,*"
+        <Grid RowDefinitions="40,20,50,20,50,50,50,20,20,*"
             ColumnDefinitions="*,*,*,*">
             <RadioButton Grid.Row="0" Grid.Column="0" Content="b.fast" x:Name="rdbIsBreakfast" 
                          CheckedChanged="rdb_CheckedChanged"/>
@@ -15,19 +15,19 @@
             <RadioButton Grid.Row="0" Grid.Column="3" Content="snack" x:Name="rdbIsSnack"
                          CheckedChanged="rdb_CheckedChanged"/>
 
-            <Label Grid.Row="1" Grid.Column="0" Text="IdMeal" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="1" Text="Meal CHO" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Text="Accuracy" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="3" Text="IdMeal" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="0" Text="Meal CHO" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="Accuracy" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" Margin="2,2,2,2" 
+            <Entry Grid.Row="2" Grid.Column="3" x:Name="txtIdMeal" BackgroundColor="White" Margin="2,2,2,2" 
                    FontSize="Medium" HorizontalTextAlignment="End" IsReadOnly="true"/>
-            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtChoOfMeal" BackgroundColor="Aqua" Margin="2,2,2,2" 
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtChoOfMeal" BackgroundColor="Aqua" Margin="2,2,2,2" 
                    Keyboard="Numeric"  FontSize="Medium" HorizontalTextAlignment="End"
                    TextChanged="txtChoOfMeal_TextChanged"/>
-            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" Margin="2,2,2,2" 
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtAccuracyOfChoMeal" Margin="2,2,2,2" 
                    Keyboard="Numeric" BackgroundColor="PaleGoldenrod" HorizontalTextAlignment="End"
                    FontSize="Medium" />
-            <Picker Grid.Row="2" Grid.Column="3" x:Name="cmbAccuracyMeal" Margin="2,2,2,2" 
+            <Picker Grid.Row="2" Grid.Column="2" x:Name="cmbAccuracyMeal" Margin="2,2,2,2" 
                     HorizontalTextAlignment="End"
                     ItemsSource="{Binding Common.QualitativeAccuracy}" 
                     SelectedItem="{Binding NotSet, Mode=TwoWay}"
@@ -37,18 +37,18 @@
             <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="Meal begin instant"  HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Picker Grid.Row="4" Grid.Column="0" x:Name="cmbTypeOfMeal" Margin="2,2,2,2" 
-                    HorizontalTextAlignment="End"
+                    HorizontalTextAlignment="Center"
                     ItemsSource="{Binding Common.TypeOfMeal}" 
                     BackgroundColor="PaleGoldenrod"
                     SelectedIndexChanged="cmbTypeOfMeal_SelectedIndexChanged"
                     FontSize="Small" />
             <DatePicker Grid.Row="4" Grid.Column="1" x:Name="dtpMealDateBegin" Margin="0,2,0,2" 
-                        BackgroundColor="PaleGreen" FontSize="Micro" Format="yyyy-MM-dd" 
+                        BackgroundColor="PaleGreen" Format="yyyy-MM-dd" 
                         HorizontalOptions="Center" />
             <TimePicker Grid.Row="4" Grid.Column="2" x:Name="dtpMealTimeBegin" Margin="0,2,0,2" 
-                        BackgroundColor="PaleGreen" FontSize="Micro" Format="HH:mm:ss" 
+                        BackgroundColor="PaleGreen" Format="HH:mm:ss" 
                         HorizontalOptions="Center" />
-            <Button Grid.Row="4" Grid.Column="3" Text="Defaults" Margin="2,2,2,2" 
+            <Button Grid.Row="4" Grid.Column="3" Text="Clean" Margin="2,2,2,2" 
                     x:Name="btnDefaults" Clicked="btnDefault_Click"></Button>
 
             <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" Margin="2,2,2,2"
@@ -105,10 +105,14 @@
                             <ViewCell.View>
                                 <Grid Margin="5">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="15"/>
+                                        <RowDefinition Height="20"/>
                                     </Grid.RowDefinitions>
-                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding TimeBegin.DateTime}"/>
-                                    <Label HorizontalTextAlignment="End" Grid.Column="1" Text="{Binding Carbohydrates.Text}"/>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding TimeBegin.DateTime}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Carbohydrates.Text}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
